--- a/ExpertSystem.Cli/Properties/launchSettings.json
+++ b/ExpertSystem.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ExpertSystem.Cli": {
       "commandName": "Project",
-      "workingDirectory": "./../Assets"
+      "workingDirectory": "../"
     }
   }
 }
